# HawkTUI

./: .gitignore  Cargo.toml  README.md
memory/: architecture.json
notes/code_review/: FINAL_REPORT.md  deeper_investigation.md  deepest_investigation.md  feature_matrix.md  investigation.md
notes/design/: DESIGN.md
notes/investigation/phase4_features/: deep_investigation.md  extension_manager_implementation.md  mcp_api_verification.md  mcp_implementation.md  mcp_investigation.md
notes/pi_integration/: round1_sdk_analysis.md  round2_stub_analysis.md
notes/reflection/: v0.2.0_retrospective.md
notes/testing/: agent_integration_e2e_2026-04-04.md  e2e_testing_2026-04-04.md
notes/v0.2.0_progress/: deeper_investigation.md  implementation_plan.md  investigation.md
src/: app.rs  lib.rs  main.rs
src/core/: commands.rs  error.rs  events.rs  keybindings.rs  mod.rs  state.rs
src/providers/: mod.rs  pi_bridge.rs
src/ui/: layout.rs  mod.rs  syntax.rs
src/ui/panels/: conversation.rs  header.rs  input.rs  mod.rs  sessions.rs  tools.rs
src/ui/themes/: mod.rs
src/ui/widgets/: mod.rs  spinner.rs  streaming.rs
tests/: integration_tests.rs
themes/: cyberpunk.toml  hawk_dark.toml
