[package]
name = "hawktui"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "A premium TUI wrapper for pi_agent_rust - See everything. Control everything. Code like a hawk."
authors = ["HawkTUI Contributors"]
license = "MIT"
repository = "https://github.com/hawktui/hawktui"
keywords = ["tui", "ai", "cli", "coding-agent", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hawk"
path = "src/main.rs"

[lib]
name = "hawktui"
path = "src/lib.rs"

[dependencies]
# TUI Framework
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Syntax Highlighting & Markdown
syntect = "5.2"
pulldown-cmark = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "2"

# Utilities
unicode-width = "0.2"
textwrap = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Pi Agent Integration (local path for development, will be crates.io later)
pi_agent_rust = { path = "../pi_agent_rust_source" }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
